--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -17,7 +17,7 @@ emoji=^(?!.*[🇦-🇿]{2}).*(法国|巴黎|France|Paris),🇫🇷
 emoji=^(?!.*[🇦-🇿]{2}).*(韩国|首尔|South Korea|Seoul),🇰🇷
 emoji=^(?!.*[🇦-🇿]{2}).*(澳大利亚|悉尼|墨尔本|Australia|Sydney|Melbourne),🇦🇺
 emoji=^(?!.*[🇦-🇿]{2}).*(俄罗斯|莫斯科|圣彼得堡|Russia|Moscow|Saint Petersburg),🇷🇺
-emoji=^(?!.*[🇦-🇿]{2}).*(中国|深圳|北京|上海|广东|山东|湖北|湖南|天津|重庆|辽宁|吉林|黑龙江|江苏|浙江|安徽|福建|云南|四川|陕西|甘肃|青海|内蒙古|西藏|宁夏|新疆|China|Shenzhen|Beijing|Shanghai|Guangdong|Shandong|Hubei|Hunan|Tianjin|Chongqing|Liaoning|Jilin|Heilongjiang|Jiangsu|Zhejiang|Anhui|Fujian|Yunnan|Sichuan|Shaanxi|Gansu|Qinghai|Inner Mongolia|Tibet|Ningxia|Xinjiang),🇨🇳
+emoji=^(?!.*[🇦-🇿]{2}).*(中国|深圳|北京|上海|广东|山东|湖北|湖南|天津|重庆|辽宁|吉林|黑龙江|江苏|浙江|安徽|福建|云南|四川|陕西|甘肃|青海|内蒙古|西藏|宁夏|新疆|China|Shenzhen|Beijing|Shanghai|Guangdong|Shandong|Hubei|Hunan|Tianjin|Chongqing|Liaoning|Jilin|Heilongjiang|Jiangsu|Zhejiang|Anhui|Fujian|Yunnan|Sichuan|Shanxi|Gansu|Qinghai|Inner Mongolia|Tibet|Ningxia|Xinjiang),🇨🇳
 emoji=^(?!.*([🇦-🇿]{2}|ℹ️)).*(官.?网|官方|产品|平台|勿连|修复|恢复|更新|地址|网站|网址|域名|网域|浏览器|导航|搜|群|裙|聊|频道|电报|飞机|扣|微信|售后|客服|工单|联系|使用|购买|续费|订阅|公告|版本|出现|没网|情况|开通|数量|注|说明|通知|去除|过滤|@|：|(?i:(?<![\da-z])(tg|telegram|t\.me|qq?|vx?|wx)(?!\d*[a-z]|\d{1,3}(?!\d))|^[^:]+:(?![\da-f]{0,4}:|\s*\d{1,5}([/?]|\s*$)))),ℹ️
 
 enable_rule_generator=true
@@ -150,6 +150,7 @@ tun:
   auto-route: true
   auto-detect-interface: true
   mtu: 1400
+  # 删除重复的tcp-balance和udp-balance参数，合并至一处
   tcp-balance: true
   udp-balance: true
   stack-buffer: 4096
@@ -175,6 +176,10 @@ tun:
     roaming-mtu: 1024
     # 低电量时禁用部分功能
     low-battery-optimizations: true
+    # 新增: 弱网络下自动降低工作负荷
+    weak-signal-optimizations: true
+    # 新增: 延长电池寿命设置
+    battery-life-extender: true
 
 # DNS配置
 dns:
@@ -213,6 +218,32 @@ dns:
   proxy-server-nameserver:
     - https://dns.google/dns-query         # Google DOH
     - https://cloudflare-dns.com/dns-query  # Cloudflare DOH
+
+  # 移动网络DNS策略 - 整合优化版
+  mobile-dns-strategy:
+    # 移动网络下使用非DoH DNS以节省资源
+    prefer-standard-dns: true
+    # 延长缓存时间
+    cache-ttl-multiplier: 2
+    # 漫游下最小化DNS查询
+    minimal-resolving-under-roaming: true
+    # 低电量时限制DNS操作
+    reduce-operations-on-low-battery: true
+    # 新增: 数据网络下智能减少DNS预取
+    reduce-prefetch-on-metered: true
+    # 新增: 弱信号下的DNS策略
+    weak-signal-strategy: conservative
+
+  # 网络感知DNS - 合并重复的配置
+  network-specific-nameserver:
+    wifi:
+      - https://dns.alidns.com/dns-query
+      - https://doh.pub/dns-query
+    mobile:
+      - 223.6.6.6
+      - 119.29.29.29
+    roaming:
+      - 223.6.6.6
 
   # 域名解析策略 - 根据域名类型选择不同的DNS服务器
   nameserver-policy:
@@ -395,7 +426,7 @@ disable-logger: true
 auto-reconnect: true
 reconnect-interval: 3
 
-# 缓存配置
+# 缓存配置 - 整合优化版
 cache:
   enable: true
   size: 8192
@@ -406,7 +437,7 @@ cache:
   disk-ratio: 0.8
   optimistic-dns: true
 
-  # 移动网络下的策略
+  # 移动网络下的策略 - 整合优化版
   mobile-strategy:
     # 增加缓存时间以减少网络请求
     extended-ttl: true
@@ -416,41 +447,33 @@ cache:
     adaptive-sizing: true
     # 低电量时最大化使用缓存
     maximize-on-low-battery: true
+    # 新增: 数据网络下节省流量
+    data-saving-mode: true
+    # 新增: 漫游状态下激进缓存
+    aggressive-caching-on-roaming: true
 
 rule-cache:
   enable: true
   size: 10240
   ttl: 7200
 
-# 嗅探配置
+# 嗅探配置 - 优化移动设备使用
 sniff:
   enable: true
   override-destination: true
   parse-pure-ip: true
   force-domain: true
+  # 新增: 移动网络下的策略
+  mobile-strategy:
+    # 弱信号下减少嗅探
+    reduce-on-weak-signal: true
+    # 低电量下有选择性嗅探
+    selective-on-low-battery: true
   skip-domain:
     - '*.alipay.com'
     - '*.pay.*.com'
-
-sniffer:
-  enable: true
-  sniff:
-    http: true
-    tls: true
-    quic: true
-    mtls: true
-  force-domain: true
-  skip-domain:
-    - 'Mijia Cloud'
-    - 'dlg.io.mi.com'
-    - '*.alipay.com'
-    - '*.weixin.qq.com'
-    - '*.pay.*.com'
-  port-whitelist:
-    - 80
-    - 443
-    - 8000-9000
-  sniffing-timeout: 200
+    - '*.bank.*.com'
+    - '*.banking.*.com'
 
 # 高级配置
 profile:
@@ -458,6 +481,7 @@ profile:
   store-fake-ip: true
   tracing: false
 
+# 无线网络切换策略 - 整合版
 wifi-ssid-switch:
   enable: true
   default: "DIRECT"
@@ -465,7 +489,11 @@ wifi-ssid-switch:
     "home-wifi": "DEFAULT"
     "work-wifi": "PROXY"
     "pay-wifi": "DIRECT"
+    # 新增: 移动热点识别
+    "AndroidAP": "MINIMAL"
+    "iPhone": "MINIMAL"
 
+# 电池优化策略 - 整合增强版
 battery-saver:
   enable: true
   threshold: 20
@@ -473,24 +501,55 @@ battery-saver:
     tcp-concurrent: false
     keep-alive-interval: 60
     sniff: selective
+    # 新增: 减少DNS查询
+    reduce-dns-queries: true
+    # 新增: 推迟非关键连接
+    defer-non-critical: true
+    # 新增: 增加缓存使用率
+    increase-cache-usage: true
 
 memory:
   optimize-for: speed
   gc-interval: 300
   max-log-size: 1
 
+# 低延迟模式 - 移动设备优化版
 low-latency-mode:
   enable: true
   handshake-timeout: 3
   socket-buffer-size: 16384
+  # 新增: 移动网络策略
+  mobile-strategy:
+    # 在数据网络上自动调整
+    auto-adjust-on-mobile: true
+    # 5G网络上使用更激进设置
+    aggressive-on-5g: true
+    # 弱信号下更保守
+    conservative-on-weak-signal: true
 
+# 移动优化 - 整合强化版
 mobile-optimization:
   enable: true
   wake-lock: selective
   reduce-background-traffic: true
   prioritize-interactive-traffic: true
   adaptive-network: true
+  # 新增: 网络切换平滑过渡
+  smooth-network-transition: true
+  # 新增: 智能暂停VPN
+  smart-vpn-pause:
+    on-call: true
+    on-hotspot: true
+    on-low-battery: true
+  # 新增: 漫游状态特殊处理
+  roaming:
+    minimal-connections: true
+    prefer-cache: true
+    disable-non-essential: true
 
+# 删除重复的network-profiles部分，只保留一个整合版
+
+# 删除重复的网络配置，整合为一个版本
 network-profiles:
   wifi:
     buffer-size: 32768
@@ -506,6 +565,9 @@ network-profiles:
     dns-prefetch: conservative
     max-connections: 128
     idle-timeout: 180
+    # 新增: 数据网络优化
+    data-saving: true
+    battery-aware: true
   roaming:
     buffer-size: 4096
     tcp-concurrent: false
@@ -513,7 +575,11 @@ network-profiles:
     dns-prefetch: disabled
     max-connections: 64
     idle-timeout: 60
+    # 新增: 漫游优化
+    minimal-operations: true
+    aggressive-caching: true
 
+# 流量控制 - 整合版
 traffic-control:
   enable: true
   mobile-data-compression: true
@@ -522,29 +588,26 @@ traffic-control:
   priorities:
     foreground: high
     background: low
+  # 新增: 网络质量感知
+  network-quality-awareness: true
+  # 新增: 带宽管理
+  bandwidth-management:
+    wifi-limit: none
+    mobile-limit: moderate
+    roaming-limit: strict
 
+# QUIC协议 - 移动设备优化版
 quic:
   enable: true
   max-idle-timeout: 30
   keep-alive-interval: 15
   0-rtt: true
-
-network-profiles:
-  wifi:
-    buffer-size: 32768
-    tcp-concurrent: true
-    keep-alive-interval: 15
-    dns-prefetch: aggressive
-  mobile:
-    buffer-size: 8192
-    tcp-concurrent: selective
-    keep-alive-interval: 45
-    dns-prefetch: conservative
-  roaming:
-    buffer-size: 4096
-    tcp-concurrent: false
-    keep-alive-interval: 60
-    dns-prefetch: disabled
+  # 新增: 移动网络策略
+  mobile-strategy:
+    disable-on-2g: true
+    conservative-on-3g: true
+    standard-on-4g: true
+    aggressive-on-5g: true
 
 geodata-mode: true
 geodata-loader: standard
@@ -552,7 +615,7 @@ global-client-fingerprint: chrome
 find-process-mode: always
 
 internet-test-url: http://www.gstatic.com/generate_204
-proxy-test-url: http://cp.cloudflare.com/generate_204
+proxy-test-url: http://www.gstatic.com/generate_204
 test-timeout: 5
 
 experimental:
@@ -565,24 +628,39 @@ experimental:
     smooth-network-switching: true
     optimized-notifications: true
     pause-during-doze: true
+    # 新增: 智能应用感知
+    app-awareness: true
+    # 新增: 省电模式增强
+    enhanced-power-saving: true
   quic-receive-window: 16777216
   bbr: true
   optimistic-connection: true
   compression: true
 
+  # 移动优化 - 整合版
   mobile-optimizations:
     smart-vpn-pause: true
     app-usage-awareness: true
     network-quality-adaptation: true
     auto-downgrade-on-low-battery: true
     data-saving-compression: true
+    # 新增: 基于活动状态调整
+    activity-based-adjustments: true
+    # 新增: 智能连接管理
+    smart-connection-management: true
 
+# URL测试 - 移动设备优化版
 url-test:
   mobile-test-interval: 600
   roaming-test-interval: 1800
   low-battery-test-interval: 900
   timeout: 3
+  # 新增: 智能间隔调整
+  adaptive-interval: true
+  # 新增: 网络质量感知
+  network-quality-aware: true
 
+# 连接管理 - 整合版
 connection-manager:
   adaptive-parameters: true
   auto-close-idle:
@@ -594,3 +672,8 @@ connection-manager:
     smooth-transition: true
     reassess-connections: true
     prioritize-essential: true
+  # 新增: 移动网络优化
+  mobile-optimizations:
+    reduce-parallel-connections: true
+    prioritize-interactive-apps: true
+    delay-background-operations: true
