--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -54,13 +54,32 @@ custom_proxy_group=🇯🇵日本`url-test`(?i)日|japan|jp`https://www.gstatic.
 custom_proxy_group=🇺🇸美国`url-test`(?i)美|states|us`https://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🎏其他`url-test`^(?!.*(港|台|新|日|美|hongkong|hk|taiwan|tw|singapore|sg|japan|jp|states|us)).*$`https://www.gstatic.com/generate_204`300,,100
 
-# 优化后的规则集合 - 使用集中的规则集替代分散规则
-# 广告和隐私保护规则
+# 优化后的规则集合 - 将广告规则提前并增加新AI平台规则
+# 广告和隐私保护规则 - 提前到最优先处理
 ruleset=💩广告,clash-domain:https://anti-ad.net/clash.yaml
 ruleset=💩广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=💩广告,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+
+# 本地网络访问规则
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+
+# AI服务 - 扩展AI平台规则
+ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
+ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.list
+ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.list
+ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Anthropic/Anthropic.list
+ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Perplexity/Perplexity.list
+# 新增AI平台规则
+ruleset=🤖AI,https://raw.githubusercontent.com/mannixlee/custom-rules/main/midjourney.list
+ruleset=🤖AI,https://raw.githubusercontent.com/mannixlee/custom-rules/main/stabilityai.list
+ruleset=🤖AI,https://raw.githubusercontent.com/mannixlee/custom-rules/main/runwayml.list
+ruleset=🤖AI,https://raw.githubusercontent.com/mannixlee/custom-rules/main/deepai.list
+
+# 去重处理 - 使用优先级更高的proxy.txt替代ProxyGFWlist.list
+# 国外网站 - 使用集中规则
+ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/proxy.txt
+# ruleset=✈️起飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 
 # 重要应用单独分流 - 保留精细控制
 # Telegram
@@ -115,7 +134,7 @@ ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/C
 
 # 国外网站 - 使用集中规则
 ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/proxy.txt
-ruleset=✈️起飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+# ruleset=✈️起飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 
 # 兜底规则
 ruleset=🐟漏网之鱼,[]FINAL
@@ -131,7 +150,7 @@ external-controller: 127.0.0.1:9090
 external-ui: dashboard
 secret: ""
 
-# DNS配置 - 针对移动网络优化，优先阿里云和谷歌DNS
+# DNS配置 - 实现DNS策略优化
 dns:
   enable: true
   ipv6: false
@@ -142,6 +161,44 @@ dns:
   preload-domain: true
   nameserver-cache-size: 4096
   prefer-h3: true
+
+  # DNS预热功能 - 预解析常用域名
+  prefetch-domain: true
+  prefetch-domains:
+    - 'google.com'
+    - 'youtube.com'
+    - 'facebook.com'
+    - 'twitter.com'
+    - 'netflix.com'
+    - 'github.com'
+    - 'openai.com'
+    - 'bing.com'
+    - 'baidu.com'
+    - 'qq.com'
+    - 'bilibili.com'
+    - 'alipay.com'
+    - 'taobao.com'
+
+  # DoH负载均衡 - 为每家服务商设置多个端点
+  doh-server-balancing: true
+
+  # 主要DNS服务器配置 - 实现负载均衡
+  nameserver:
+    # 阿里云DNS负载均衡
+    - https://dns.alidns.com/dns-query           # 阿里主端点
+    - https://223.6.6.6/dns-query                # 阿里备用端点
+    # 谷歌DNS负载均衡
+    - https://dns.google/dns-query               # 谷歌主端点
+    - https://8.8.8.8/dns-query                  # 谷歌备用端点
+    # 腾讯DNS作为备用
+    - https://doh.pub/dns-query                  # 腾讯主端点
+    - 223.6.6.6                                  # 阿里非加密备用
+
+  # EDNS Client Subnet支持
+  edns-client-subnet:
+    enable: true
+    policy: prefer-precision       # 优先精确
+    custom-subnet: "224.0.0.0/24"  # 自定义子网
 
   # 默认DNS服务器 - 阿里DNS优先
   default-nameserver:
@@ -339,3 +396,96 @@ url-test:
   timeout: 5                 # 适应移动网络延迟
   adaptive-interval: true
   network-quality-aware: true
+
+# 网络质量感知增强 - 实现方案
+network-quality-sensing:
+  enable: true
+  # 网络切换平滑过渡
+  smooth-transition:
+    enable: true
+    connection-maintain: 5  # 保持连接5秒以实现平滑过渡
+    priority-connection: true  # 优先保障重要连接
+
+  # 信号强度自适应
+  signal-adaptive:
+    enable: true
+    weak-signal-strategy: conservative  # 弱信号下保守策略
+    strong-signal-strategy: aggressive  # 强信号下激进策略
+    update-interval: 10                 # 10秒更新一次
+
+  # 智能拥塞控制
+  congestion-control:
+    enable: true
+    algorithm: bbr          # 默认使用BBR
+    auto-switch: true       # 自动切换算法
+    poor-network-algorithm: cubic  # 差网络下使用cubic
+    network-monitor-interval: 10   # 监控间隔
+
+# 特殊网络模式 - 实现特殊场景支持
+special-network-modes:
+  # 高延迟网络模式 - 卫星网络或高ping值情况
+  high-latency-mode:
+    enable: false  # 默认不启用
+    trigger-latency: 300  # 超过300ms延迟时触发
+    max-concurrent: 32    # 限制并发连接
+    timeout-multiplier: 3  # 超时时间乘数
+    aggressive-caching: true  # 激进缓存
+    reduced-keepalive: true   # 减少keepalive
+
+  # 数据节省极致模式
+  extreme-data-saving:
+    enable: false  # 默认不启用
+    compression-level: maximum  # 最大压缩
+    image-quality-reduction: true  # 降低图片质量
+    disable-preload: true  # 禁用预加载
+    minimal-connections: true  # 最小化连接数
+    cache-everything: true  # 缓存所有内容
+
+  # 隐私增强模式
+  enhanced-privacy:
+    enable: false  # 默认不启用
+    rotate-user-agent: true  # 轮换UA
+    prevent-fingerprinting: true  # 防止指纹追踪
+    dns-over-https-only: true  # 仅使用DoH
+    block-trackers: true  # 拦截跟踪器
+    strict-sns: true  # 严格SNI
+
+# 兼容性与防护 - 实现防探测和混淆
+gfw-protection:
+  # 增强GFW防探测
+  enhanced-stealth:
+    enable: true
+    tls-fragmentation: true  # TLS分片
+    packet-delay-variation: true  # 数据包延迟变化
+    avoid-pattern-traffic: true  # 避免特征流量
+
+  # 协议混淆增强
+  protocol-obfuscation:
+    enable: true
+    tls-fingerprint: chrome  # 使用Chrome指纹
+    http-header-obfuscation: true  # HTTP头部混淆
+    timing-simulation: true  # 模拟真实时间特征
+
+  # 备用连接策略
+  fallback-strategy:
+    enable: true
+    fallback-sequence:
+      - tls-direct  # 首选TLS直连
+      - tls-obfs    # 备选TLS混淆
+      - ws-tls      # 备选WS+TLS
+      - grpc        # 最后选择gRPC
+    auto-retry: true  # 自动重试
+    max-retries: 3    # 最多重试3次
+
+# 在profile部分添加元数据以便识别优化版本
+profile:
+  store-selected: true
+  store-fake-ip: true
+  tracing: false
+  optimized-version: "enhanced-mobile-1.0"  # 添加版本标识
+  optimizations-applied:
+    - "rule-optimization"
+    - "dns-enhancement"
+    - "network-quality"
+    - "special-modes"
+    - "privacy-protection"
