--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -235,10 +235,35 @@ dns:
   listen: 0.0.0.0:53
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
+  fake-ip-filter:
+    - "*.lan"
+    - "localhost.ptlogin2.qq.com"
+    - "dns.msftncsi.com"
+    - "www.msftncsi.com"
+    - "www.msftconnecttest.com"
+    - "network-test.debian.org"
+    - "detectportal.firefox.com"
+    - "resolver1.opendns.com"
+    - "*.srv.nintendo.net"
+    - "*.stun.playstation.net"
+    - "xbox.*.microsoft.com"
+    - "*.xboxlive.com"
+    - "stun.*"
+    - "global.turn.twilio.com"
+    - "global.stun.twilio.com"
+    - "localhost.sec.qq.com"
+    - "localhost.ptlogin2.qq.com"
+    - "*.blizzard.com"
+    - "*.battlenet.com.cn"
+    - "*.battlenet.com"
+    - "*.blzstatic.cn"
+
   use-hosts: true
   preload-domain: true
   nameserver-cache-size: 4096
   prefer-h3: true
+  cache: true
+  cache-size: 8192
 
   # DNS预热功能
   prefetch-domain: true
@@ -252,48 +277,214 @@ dns:
     - 'bilibili.com'
     - 'alipay.com'
     - 'taobao.com'
+    - 'qq.com'
+    - 'wechat.com'
+    - 'weixin.qq.com'
+    - 'jd.com'
+    - 'tmall.com'
+    - 'netflix.com'
+    - 'microsoft.com'
+    - 'apple.com'
+    - 'twitter.com'
+    - 'x.com'
+    - 'instagram.com'
+    - 'telegram.org'
+    - 'zhihu.com'
+    - 'weibo.com'
 
   # 默认DNS服务器
   default-nameserver:
-    - 223.6.6.6
+    - 223.5.5.5
     - 119.29.29.29
+    - 1.1.1.1
     - 8.8.8.8
 
-  # 主要DNS服务器
+  # 主要DNS服务器 - 国内优先
   nameserver:
-    - https://dns.alidns.com/dns-query
-    - https://dns.google/dns-query
-    - https://doh.pub/dns-query
-    - 223.6.6.6
+    - https://dns.alidns.com/dns-query  # 阿里DNS
+    - https://doh.pub/dns-query  # 腾讯DNS
+    - 223.5.5.5  # 阿里DNS
+    - 119.29.29.29  # 腾讯DNS
 
   # 国外回落DNS
   fallback:
     - https://dns.google/dns-query
     - https://cloudflare-dns.com/dns-query
     - https://doh.opendns.com/dns-query
+    - tls://1.1.1.1:853  # Cloudflare
+    - tls://8.8.8.8:853  # Google
 
-  # 关键域名DNS策略
+  # DNS回落过滤器 - 精确控制国内外DNS解析
+  fallback-filter:
+    geoip: true  # 使用geoip数据判断是否回落
+    geoip-code: CN  # 国内IP使用nameserver，非国内使用fallback
+    ipcidr:  # 保留地址不回落到fallback
+      - 240.0.0.0/4
+      - 127.0.0.1/8
+      - 0.0.0.0/32
+      - 10.0.0.0/8
+      - 172.16.0.0/12
+      - 192.168.0.0/16
+      - 224.0.0.0/4
+      - 100.64.0.0/10
+      - 169.254.0.0/16
+      - 192.0.0.0/24
+      - 192.0.2.0/24
+      - 198.18.0.0/15
+      - 198.51.100.0/24
+      - 203.0.113.0/24
+    domain:
+      - "+.google.com"
+      - "+.facebook.com"
+      - "+.youtube.com"
+      - "+.github.com"
+      - "+.githubusercontent.com"
+      - "+.googlevideo.com"
+      - "+.netflix.com"
+      - "+.openai.com"
+      - "+.twitter.com"
+      - "+.x.com"
+      - "+.instagram.com"
+      - "+.spotify.com"
+      - "+.discord.com"
+      - "+.reddit.com"
+      - "+.telegram.org"
+      - "+.t.me"
+      - "+.amazon.com"
+      - "+.bing.com"
+      - "+.microsoft.com"
+      - "+.msftconnecttest.com"
+      - "+.msftncsi.com"
+      - "+.office.com"
+      - "+.office365.com"
+      - "+.amazonaws.com"
+      - "+.claude.ai"
+      - "+.anthropic.com"
+      - "+.cloudflare.com"
+      - "+.vercel.app"
+      - "+.figma.com"
+      - "+.notion.so"
+      - "+.mozilla.org"
+      - "+.firefox.com"
+      - "+.googlesource.com"
+      - "+.githubusercontent.com"
+      - "+.docker.com"
+      - "+.apple.com"
+      - "+.icloud.com"
+
+  # 关键域名DNS策略 - 为特定域名指定解析服务器
   nameserver-policy:
-    'domain:github.com,domain:githubusercontent.com': [https://dns.google/dns-query]
-    'domain:openai.com,domain:anthropic.com,domain:claude.ai': [https://dns.google/dns-query]
-    'domain:netflix.com,domain:nflxvideo.net': [https://dns.google/dns-query]
-    'domain:alipay.com,domain:taobao.com,domain:wechat.com': [https://dns.alidns.com/dns-query]
+    # 国外网站和服务使用国外DNS
+    'domain:github.com,domain:githubusercontent.com,domain:ghcr.io': [https://dns.google/dns-query, https://cloudflare-dns.com/dns-query]
+    'domain:google.com,domain:googleapis.com,domain:googlevideo.com': [https://dns.google/dns-query, https://cloudflare-dns.com/dns-query]
+    'domain:openai.com,domain:anthropic.com,domain:claude.ai': [https://dns.google/dns-query, https://cloudflare-dns.com/dns-query]
+    'domain:netflix.com,domain:nflxvideo.net,domain:nflxso.net': [https://dns.google/dns-query, https://cloudflare-dns.com/dns-query]
+    'domain:twitter.com,domain:x.com,domain:t.co': [https://dns.google/dns-query, https://cloudflare-dns.com/dns-query]
+    'domain:instagram.com,domain:cdninstagram.com,domain:facebook.com': [https://dns.google/dns-query, https://cloudflare-dns.com/dns-query]
+    'domain:telegram.org,domain:t.me,domain:tdesktop.com': [https://dns.google/dns-query, https://cloudflare-dns.com/dns-query]
+    'domain:apple.com,domain:icloud.com,domain:apple-dns.net': [https://doh.dns.apple.com/dns-query, https://cloudflare-dns.com/dns-query]
+    'domain:microsoft.com,domain:msftconnecttest.com,domain:windows.net': [https://dns.google/dns-query, https://cloudflare-dns.com/dns-query]
+
+    # 国内网站和服务使用国内DNS
+    'domain:alipay.com,domain:taobao.com,domain:tmall.com,domain:jd.com': [https://dns.alidns.com/dns-query, 223.5.5.5]
+    'domain:tencent.com,domain:qq.com,domain:weixin.qq.com,domain:wechat.com': [https://doh.pub/dns-query, 119.29.29.29]
+    'domain:bilibili.com,domain:bilivideo.com,domain:hdslb.com': [https://doh.pub/dns-query, https://dns.alidns.com/dns-query]
+    'domain:baidu.com,domain:bdimg.com,domain:bdstatic.com': [https://doh.pub/dns-query, https://dns.alidns.com/dns-query]
+    'domain:163.com,domain:126.com,domain:netease.com': [https://dns.alidns.com/dns-query, 223.5.5.5]
+    'domain:zhihu.com,domain:zhimg.com': [https://doh.pub/dns-query, 119.29.29.29]
+    'domain:weibo.com,domain:sina.com.cn,domain:sinaimg.cn': [https://dns.alidns.com/dns-query, 223.5.5.5]
+    'domain:douyin.com,domain:toutiao.com,domain:bytedance.com': [https://doh.pub/dns-query, 119.29.29.29]
+    'domain:meituan.com,domain:dianping.com': [https://dns.alidns.com/dns-query, 223.5.5.5]
+    'domain:youku.com,domain:soku.com,domain:ykimg.com': [https://dns.alidns.com/dns-query, 223.5.5.5]
+    'domain:iqiyi.com,domain:qiyi.com,domain:71.am': [https://doh.pub/dns-query, 119.29.29.29]
 
 # 常用域名预处理规则
 prepend-rules:
+  # AI服务
   - 'DOMAIN-SUFFIX,openai.com,🤖AI'
   - 'DOMAIN-SUFFIX,anthropic.com,🤖AI'
   - 'DOMAIN-SUFFIX,claude.ai,🤖AI'
+  - 'DOMAIN-SUFFIX,ai.com,🤖AI'
+  - 'DOMAIN-SUFFIX,chat.openai.com,🤖AI'
+  - 'DOMAIN-SUFFIX,bard.google.com,🤖AI'
+  - 'DOMAIN-SUFFIX,gemini.google.com,🤖AI'
+  - 'DOMAIN-SUFFIX,sentry.io,🤖AI'
+  - 'DOMAIN-SUFFIX,intercom.io,🤖AI'
+  - 'DOMAIN-SUFFIX,perplexity.ai,🤖AI'
+
+  # 开发工具
   - 'DOMAIN-SUFFIX,github.com,🧰开发工具'
   - 'DOMAIN-SUFFIX,githubusercontent.com,🧰开发工具'
+  - 'DOMAIN-SUFFIX,githubassets.com,🧰开发工具'
+  - 'DOMAIN-SUFFIX,gitlab.com,🧰开发工具'
+  - 'DOMAIN-SUFFIX,vercel.app,🧰开发工具'
+  - 'DOMAIN-SUFFIX,netlify.app,🧰开发工具'
+  - 'DOMAIN-SUFFIX,npmjs.com,🧰开发工具'
+  - 'DOMAIN-SUFFIX,stackoverflow.com,🧰开发工具'
+  - 'DOMAIN-SUFFIX,jetbrains.com,🧰开发工具'
+  - 'DOMAIN-SUFFIX,visualstudio.com,🧰开发工具'
+  - 'DOMAIN-SUFFIX,code.visualstudio.com,🧰开发工具'
+  - 'DOMAIN-SUFFIX,docker.com,🧰开发工具'
+
+  # Google服务
   - 'DOMAIN-SUFFIX,google.com,🛡️Google服务'
+  - 'DOMAIN-SUFFIX,googleapis.com,🛡️Google服务'
+  - 'DOMAIN-SUFFIX,googleusercontent.com,🛡️Google服务'
+  - 'DOMAIN-SUFFIX,google-analytics.com,🛡️Google服务'
+  - 'DOMAIN-SUFFIX,googletagmanager.com,🛡️Google服务'
+  - 'DOMAIN-SUFFIX,gstatic.com,🛡️Google服务'
+  - 'DOMAIN-SUFFIX,chrome.com,🛡️Google服务'
+
+  # 流媒体视频
   - 'DOMAIN-SUFFIX,youtube.com,🎬YouTube'
   - 'DOMAIN-SUFFIX,youtu.be,🎬YouTube'
   - 'DOMAIN-SUFFIX,googlevideo.com,🎬YouTube'
+  - 'DOMAIN-SUFFIX,ytimg.com,🎬YouTube'
+  - 'DOMAIN-SUFFIX,ggpht.com,🎬YouTube'
   - 'DOMAIN-SUFFIX,netflix.com,🎬Netflix'
+  - 'DOMAIN-SUFFIX,nflxvideo.net,🎬Netflix'
+  - 'DOMAIN-SUFFIX,nflxso.net,🎬Netflix'
+  - 'DOMAIN-SUFFIX,nflxext.com,🎬Netflix'
+
+  # 社交媒体
   - 'DOMAIN-SUFFIX,twitter.com,📲社交媒体'
+  - 'DOMAIN-SUFFIX,twimg.com,📲社交媒体'
   - 'DOMAIN-SUFFIX,x.com,📲社交媒体'
+  - 'DOMAIN-SUFFIX,t.co,📲社交媒体'
   - 'DOMAIN-SUFFIX,instagram.com,📲社交媒体'
+  - 'DOMAIN-SUFFIX,cdninstagram.com,📲社交媒体'
   - 'DOMAIN-SUFFIX,discord.com,📲社交媒体'
+  - 'DOMAIN-SUFFIX,discord.gg,📲社交媒体'
+  - 'DOMAIN-SUFFIX,discordapp.com,📲社交媒体'
+  - 'DOMAIN-SUFFIX,discordapp.net,📲社交媒体'
+  - 'DOMAIN-SUFFIX,reddit.com,📲社交媒体'
+  - 'DOMAIN-SUFFIX,redd.it,📲社交媒体'
+  - 'DOMAIN-SUFFIX,redditmedia.com,📲社交媒体'
+  - 'DOMAIN-SUFFIX,redditstatic.com,📲社交媒体'
+  - 'DOMAIN-SUFFIX,linkedin.com,📲社交媒体'
+  - 'DOMAIN-SUFFIX,pinterest.com,📲社交媒体'
+
+  # 电报相关
   - 'DOMAIN-SUFFIX,telegram.org,📱电报'
   - 'DOMAIN-SUFFIX,t.me,📱电报'
+  - 'DOMAIN-SUFFIX,tdesktop.com,📱电报'
+  - 'DOMAIN-SUFFIX,telegra.ph,📱电报'
+  - 'DOMAIN-SUFFIX,telesco.pe,📱电报'
+
+  # 国内网站
+  - 'DOMAIN-SUFFIX,baidu.com,🛩️墙内'
+  - 'DOMAIN-SUFFIX,bdstatic.com,🛩️墙内'
+  - 'DOMAIN-SUFFIX,qq.com,🛩️墙内'
+  - 'DOMAIN-SUFFIX,weixin.qq.com,🛩️墙内'
+  - 'DOMAIN-SUFFIX,alipay.com,🛩️墙内'
+  - 'DOMAIN-SUFFIX,taobao.com,🛩️墙内'
+  - 'DOMAIN-SUFFIX,tmall.com,🛩️墙内'
+  - 'DOMAIN-SUFFIX,jd.com,🛩️墙内'
+  - 'DOMAIN-SUFFIX,bilibili.com,🛩️墙内'
+  - 'DOMAIN-SUFFIX,bilivideo.com,🛩️墙内'
+  - 'DOMAIN-SUFFIX,zhihu.com,🛩️墙内'
+  - 'DOMAIN-SUFFIX,douyin.com,🛩️墙内'
+  - 'DOMAIN-SUFFIX,weibo.com,🛩️墙内'
+  - 'DOMAIN-SUFFIX,alicdn.com,🛩️墙内'
+  - 'DOMAIN-SUFFIX,163.com,🛩️墙内'
+  - 'DOMAIN-SUFFIX,126.com,🛩️墙内'
