--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -6,7 +6,7 @@ exclude_remarks=(Data Left|Remain:|Traffic:|Expir[ey]|Reset|(\d[\d.]*\s*[MG]B[^\
 
 # Emoji 设置
 add_emoji=true
-remove_old_emoji=true
+remove_old_emoji=true  # 移除旧emoji避免重复
 emoji=(?!🇨🇳)[🇦-🇿]{2},
 emoji=^(?!.*[🇦-🇿]{2}).*(美国|华盛顿|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|旧金山|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|纽约|丹佛|加利福尼亚|弗吉尼亚|得克萨斯|亚特兰大|佛罗里达|迈阿密|United States|Washington|Portland|Dallas|Oregon|Phoenix|Fremont|Silicon Valley|San Francisco|Las Vegas|Los Angeles|San Jose|Santa Clara|Seattle|Chicago|New York|Denver|California|Virginia|Texas|Atlanta|Florida|Miami),🇺🇸
 emoji=^(?!.*[🇦-🇿]{2}).*(香港|Hong Kong),🇭🇰
@@ -20,6 +20,7 @@ emoji=^(?!.*[🇦-🇿]{2}).*(法国|巴黎|France|Paris),🇫🇷
 emoji=^(?!.*[🇦-🇿]{2}).*(韩国|首尔|South Korea|Seoul),🇰🇷
 emoji=^(?!.*[🇦-🇿]{2}).*(澳大利亚|悉尼|墨尔本|Australia|Sydney|Melbourne),🇦🇺
 emoji=^(?!.*[🇦-🇿]{2}).*(俄罗斯|莫斯科|圣彼得堡|Russia|Moscow|Saint Petersburg),🇷🇺
+emoji=^(?!.*[🇦-🇿]{2}).*(中国|深圳|北京|上海|广东|山东|湖北|湖南|天津|重庆|辽宁|吉林|黑龙江|江苏|浙江|安徽|福建|云南|四川|陕西|甘肃|青海|内蒙古|西藏|宁夏|新疆|China|Shenzhen|Beijing|Shanghai|Guangdong|Shandong|Hubei|Hunan|Tianjin|Chongqing|Liaoning|Jilin|Heilongjiang|Jiangsu|Zhejiang|Anhui|Fujian|Yunnan|Sichuan|Shanxi|Gansu|Qinghai|Inner Mongolia|Tibet|Ningxia|Xinjiang),🇨🇳
 emoji=^(?!.*([🇦-🇿]{2}|ℹ️)).*(官.?网|官方|产品|平台|勿连|修复|恢复|更新|地址|网站|网址|域名|网域|浏览器|导航|搜|群|裙|聊|频道|电报|飞机|扣|微信|售后|客服|工单|联系|使用|购买|续费|订阅|公告|版本|出现|没网|情况|开通|数量|注|说明|通知|去除|过滤|@|：|(?i:(?<![\da-z])(tg|telegram|t\.me|qq?|vx?|wx)(?!\d*[a-z]|\d{1,3}(?!\d))|^[^:]+:(?![\da-f]{0,4}:|\s*\d{1,5}([/?]|\s*$)))),ℹ️
 
 # 规则生成设置
@@ -146,55 +147,17 @@ ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule
 ruleset=🧰开发工具,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Developer/Developer.yaml
 
 # 14. 中国大陆网站和IP
-# 国内常用应用和平台专用规则（优先级最高）
-ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/WeChat.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Alipay.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Taobao.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TencentVideo.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/IQiyi.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DouYin/DouYin.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/XiaoHongShu/XiaoHongShu.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Douyu/Douyu.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Baidu/Baidu.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Tencent/Tencent.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sina/Sina.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEase/NetEase.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/JD/JD.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/MeiTuan/MeiTuan.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Didi/Didi.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PDD/PDD.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Kingsoft/Kingsoft.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMaxNoIP/ChinaMaxNoIP.list
-
-# 国内常用云服务和CDN
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AliPay/AliPay.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AliCloud/AliCloud.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TencentCloud/TencentCloud.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/360/360.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/4399/4399.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/XianYu/XianYu.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/iFlytek/iFlytek.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OnePlus/OnePlus.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HuaweiCloud/HuaweiCloud.list
-
-# Loyalsoldier规则集（高质量中国大陆域名和IP规则）
+# 优先使用Loyalsoldier规则集
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/applications.txt
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/direct.txt
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/private.txt
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/cncidr.txt
-
-# 其他常用中国大陆规则
+# 下列规则部分内容与上面重复，注释以避免重复
+# ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/moistrr/Clashruleset/refs/heads/main/config/zhilian.list
-
-# 使用GEOIP数据库匹配中国IP地址
 ruleset=🛩️墙内,[]GEOIP,CN,no-resolve
 
 # 15. 国外网站集合规则（优先级最低的常规代理规则）
