--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -72,63 +72,20 @@ custom_proxy_group=🇺🇸美国`url-test`(?i)美|states|us`https://www.gstatic
 custom_proxy_group=🎏其他`select`^(?!.*(港|hongkong|hk|台|taiwan|tw|新|狮|獅|singapore|sg|日|japan|jp|美|states|us)).*$
 
 # ========== 分流规则配置 ==========
-# 优化规则顺序和解决重叠问题
-
 # 1. 优先级最高：广告拦截
 ruleset=💩广告,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/AdvertisingLite/AdvertisingLite.yaml
-# 添加隐私保护规则
-ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy.list
-ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hijacking/Hijacking.list
 
 # 2. 本地/直连规则
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 
-# 3. 国内重要服务 - 避免覆盖问题
-# 由于下面添加了大量细分规则和大公司规则(如ByteDance, Alibaba等)，这里只保留关键应用
+# 3. 重要的国内服务单独分流 - 确保稳定性
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/WeChat.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Alipay.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/UnionPay.list
 
-# 3.1 电商购物平台 - 国内电商 (按公司覆盖关系调整顺序)
-# 注意: 这些规则可能部分被上方Alibaba规则覆盖，但为了精细控制保留
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/JingDong/JingDong.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Pinduoduo/Pinduoduo.list
-# 新增直播和交易平台
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/XianYu/XianYu.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/DouYin/DouYin.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Meituan/Meituan.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Taobao/Taobao.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TMall/TMall.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Suning/Suning.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/VipShop/VipShop.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/XiaoHongShu/XiaoHongShu.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DingDongMaiCai/DingDongMaiCai.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Eleme/Eleme.list
-
-# 3.2 电商购物平台 - 国际电商
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Amazon/Amazon.list
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/eBay/eBay.list
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Rakuten/Rakuten.list
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Shopee/Shopee.list
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Shopify/Shopify.list
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PayPal/PayPal.list
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lazada/Lazada.list
-ruleset=✈️起飞,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AliExpress/AliExpress.list
-
-# 3.3 新增金融和银行服务专用规则
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UnionPay/UnionPay.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/CCB/CCB.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BOC/BOC.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ICBC/ICBC.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ABC/ABC.list
-
 # 4. AI服务 - 整合所有AI平台规则
 ruleset=🤖AI,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/AI/AI.yaml
-# 保证OpenAI和新兴AI服务能正确分流
-ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
-ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.list
-ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.list
 
 # 5. 即时通讯工具
 ruleset=📱电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
@@ -144,12 +101,6 @@ ruleset=🟢Spotify,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
 ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBO/HBO.list
 ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrimeVideo/PrimeVideo.list
-# 新增更多流媒体规则
-ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DAZN/DAZN.list
-ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hulu/Hulu.list
-ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleTV/AppleTV.list
-ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TVB/TVB.list
-# 保留通用媒体规则在最后
 ruleset=🎬流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 
 # 7. 社交媒体平台
@@ -201,7 +152,7 @@ ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/direct.txt
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/private.txt
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/cncidr.txt
-# 添加国内主流应用和服务规则 (注意顺序，先放大公司通用规则，其特殊服务已在前面处理)
+# 添加国内主流应用和服务规则
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Tencent/Tencent.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Baidu/Baidu.list
@@ -209,21 +160,11 @@ ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_sc
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEase/NetEase.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sina/Sina.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaBank/ChinaBank.list
-# 新增实用性分类规则
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaNews/ChinaNews.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DiDi/DiDi.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Douyu/Douyu.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/12306/12306.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/115/115.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/360/360.list
-# 最后放最大的规则，避免覆盖前面细分规则
 ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax_Domain.list
 # 保留原有的补充规则
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-# 避免重复，删除重复的规则
-# ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/moistrr/Clashruleset/refs/heads/main/config/zhilian.list
 ruleset=🛩️墙内,[]GEOIP,CN,no-resolve
 
@@ -286,11 +227,6 @@ dns:
     - 'zhihu.com'
     - 'douyin.com'
     - 'jd.com'
-    - 'qq.com'
-    - 'tmall.com'
-    - 'pinduoduo.com'
-    - 'kuaishou.com'
-    - 'xiaohongshu.com'
 
   # 默认DNS服务器
   default-nameserver:
@@ -318,26 +254,15 @@ dns:
     geoip-code: CN
     geosite:
       - geolocation-!cn
-    # 添加例外域名，强制使用国内DNS
-    domain:
-      - '+.qq.com'
-      - '+.tencent.com'
-      - '+.weixin.qq.com'
-      - '+.alipay.com'
-      - '+.taobao.com'
-      - '+.tmall.com'
-      - '+.jd.com'
 
   # 关键域名DNS策略
   nameserver-policy:
     # 国内服务用阿里DNS
     'domain:alipay.com,domain:taobao.com,domain:tmall.com': [https://dns.alidns.com/dns-query]
-    'domain:jd.com,domain:pinduoduo.com,domain:meituan.com': [https://dns.alidns.com/dns-query]
     'domain:baidu.com,domain:bilibili.com,domain:163.com': [https://dns.alidns.com/dns-query]
     'domain:weixin.qq.com,domain:qq.com,domain:tencent.com': [https://dns.alidns.com/dns-query]
-    'domain:12306.cn,domain:zhihu.com,domain:xiaohongshu.com': [https://dns.alidns.com/dns-query]
+    'domain:jd.com,domain:12306.cn,domain:zhihu.com': [https://dns.alidns.com/dns-query]
     # 国外服务用谷歌DNS
-    'domain:amazon.com,domain:ebay.com,domain:paypal.com': [https://dns.google/dns-query]
     'domain:github.com,domain:githubusercontent.com': [https://dns.google/dns-query]
     'domain:openai.com,domain:anthropic.com,domain:claude.ai': [https://dns.google/dns-query]
     'domain:google.com,domain:youtube.com,domain:ytimg.com': [https://dns.google/dns-query]
@@ -350,8 +275,6 @@ prepend-rules:
   - 'DOMAIN-SUFFIX,openai.com,🤖AI'
   - 'DOMAIN-SUFFIX,anthropic.com,🤖AI'
   - 'DOMAIN-SUFFIX,claude.ai,🤖AI'
-  - 'DOMAIN-SUFFIX,bard.google.com,🤖AI'
-  - 'DOMAIN-SUFFIX,gemini.google.com,🤖AI'
   - 'DOMAIN-SUFFIX,github.com,🧰开发工具'
   - 'DOMAIN-SUFFIX,githubusercontent.com,🧰开发工具'
   - 'DOMAIN-SUFFIX,google.com,🛡️Google服务'
@@ -365,10 +288,3 @@ prepend-rules:
   - 'DOMAIN-SUFFIX,discord.com,📲社交媒体'
   - 'DOMAIN-SUFFIX,telegram.org,📱电报'
   - 'DOMAIN-SUFFIX,t.me,📱电报'
-  - 'DOMAIN-SUFFIX,jd.com,🛩️墙内'
-  - 'DOMAIN-SUFFIX,taobao.com,🛩️墙内'
-  - 'DOMAIN-SUFFIX,tmall.com,🛩️墙内'
-  - 'DOMAIN-SUFFIX,pinduoduo.com,🛩️墙内'
-  - 'DOMAIN-SUFFIX,amazon.com,✈️起飞'
-  - 'DOMAIN-SUFFIX,paypal.com,✈️起飞'
-  - 'DOMAIN-SUFFIX,ebay.com,✈️起飞'
