--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -147,21 +147,13 @@ ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule
 ruleset=🧰开发工具,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Developer/Developer.yaml
 
 # 14. 中国大陆网站和IP
-# 优先使用Loyalsoldier规则集（更新频率高）
+# 优先使用Loyalsoldier规则集
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/applications.txt
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/direct.txt
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/private.txt
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/cncidr.txt
-# 添加国内主流应用和服务规则
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Tencent/Tencent.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Baidu/Baidu.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEase/NetEase.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sina/Sina.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaBank/ChinaBank.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax_Domain.list
-# 保留原有的补充规则
+# 下列规则部分内容与上面重复，注释以避免重复
+# ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
@@ -223,52 +215,32 @@ dns:
     - 'bilibili.com'
     - 'alipay.com'
     - 'taobao.com'
-    - 'weixin.qq.com'
-    - 'zhihu.com'
-    - 'douyin.com'
-    - 'jd.com'
 
   # 默认DNS服务器
   default-nameserver:
-    - 223.5.5.5     # 阿里DNS
-    - 119.29.29.29  # 腾讯DNS
-    - 8.8.8.8       # 谷歌DNS
+    - 223.6.6.6
+    - 119.29.29.29
+    - 8.8.8.8
 
   # 主要DNS服务器
   nameserver:
-    - https://dns.alidns.com/dns-query  # 阿里加密DNS（优先）
-    - https://doh.pub/dns-query         # 腾讯加密DNS
-    - https://dns.dnspod.cn/dns-query   # DNSPod加密DNS
-    - 223.5.5.5                         # 阿里备用DNS
+    - https://dns.alidns.com/dns-query
+    - https://dns.google/dns-query
+    - https://doh.pub/dns-query
+    - 223.6.6.6
 
   # 国外回落DNS
   fallback:
-    - https://dns.google/dns-query      # 谷歌加密DNS（优先）
+    - https://dns.google/dns-query
     - https://cloudflare-dns.com/dns-query
     - https://doh.opendns.com/dns-query
-    - 8.8.8.8                           # 谷歌备用DNS
-
-  # 按域名类型分配DNS
-  fallback-filter:
-    geoip: true
-    geoip-code: CN
-    geosite:
-      - geolocation-!cn
 
   # 关键域名DNS策略
   nameserver-policy:
-    # 国内服务用阿里DNS
-    'domain:alipay.com,domain:taobao.com,domain:tmall.com': [https://dns.alidns.com/dns-query]
-    'domain:baidu.com,domain:bilibili.com,domain:163.com': [https://dns.alidns.com/dns-query]
-    'domain:weixin.qq.com,domain:qq.com,domain:tencent.com': [https://dns.alidns.com/dns-query]
-    'domain:jd.com,domain:12306.cn,domain:zhihu.com': [https://dns.alidns.com/dns-query]
-    # 国外服务用谷歌DNS
     'domain:github.com,domain:githubusercontent.com': [https://dns.google/dns-query]
     'domain:openai.com,domain:anthropic.com,domain:claude.ai': [https://dns.google/dns-query]
-    'domain:google.com,domain:youtube.com,domain:ytimg.com': [https://dns.google/dns-query]
     'domain:netflix.com,domain:nflxvideo.net': [https://dns.google/dns-query]
-    'domain:twitter.com,domain:instagram.com': [https://dns.google/dns-query]
-    'domain:telegram.org,domain:t.me': [https://dns.google/dns-query]
+    'domain:alipay.com,domain:taobao.com,domain:wechat.com': [https://dns.alidns.com/dns-query]
 
 # 常用域名预处理规则
 prepend-rules:
