--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -281,19 +281,6 @@ dns:
     - 'bilibili.com'
     - 'alipay.com'
     - 'taobao.com'
-    - 'weixin.qq.com'
-    - 'zhihu.com'
-    - 'douyin.com'
-    - 'jd.com'
-    - 'qq.com'
-    - 'tmall.com'
-    - 'pinduoduo.com'
-    - 'kuaishou.com'
-    - 'xiaohongshu.com'
-    - 'netflix.com'
-    - 'instagram.com'
-    - 'twitter.com'
-    - 'telegram.org'
 
   # 默认DNS服务器
   default-nameserver:
@@ -316,30 +303,16 @@ dns:
 
   # 关键域名DNS策略
   nameserver-policy:
-    # 国内服务用阿里DNS
-    'domain:alipay.com,domain:taobao.com,domain:tmall.com': [https://dns.alidns.com/dns-query]
-    'domain:jd.com,domain:pinduoduo.com,domain:meituan.com': [https://dns.alidns.com/dns-query]
-    'domain:baidu.com,domain:bilibili.com,domain:163.com': [https://dns.alidns.com/dns-query]
-    'domain:weixin.qq.com,domain:qq.com,domain:tencent.com': [https://dns.alidns.com/dns-query]
-    'domain:12306.cn,domain:zhihu.com,domain:xiaohongshu.com': [https://dns.alidns.com/dns-query]
-    'domain:douyin.com,domain:kuaishou.com,domain:huya.com': [https://dns.alidns.com/dns-query]
-    # 国外服务用谷歌DNS
-    'domain:amazon.com,domain:ebay.com,domain:paypal.com': [https://dns.google/dns-query]
     'domain:github.com,domain:githubusercontent.com': [https://dns.google/dns-query]
     'domain:openai.com,domain:anthropic.com,domain:claude.ai': [https://dns.google/dns-query]
-    'domain:google.com,domain:youtube.com,domain:ytimg.com': [https://dns.google/dns-query]
     'domain:netflix.com,domain:nflxvideo.net': [https://dns.google/dns-query]
-    'domain:twitter.com,domain:instagram.com': [https://dns.google/dns-query]
-    'domain:telegram.org,domain:t.me': [https://dns.google/dns-query]
-    'domain:disney.com,domain:disneyplus.com': [https://dns.google/dns-query]
+    'domain:alipay.com,domain:taobao.com,domain:wechat.com': [https://dns.alidns.com/dns-query]
 
 # 常用域名预处理规则
 prepend-rules:
   - 'DOMAIN-SUFFIX,openai.com,🤖AI'
   - 'DOMAIN-SUFFIX,anthropic.com,🤖AI'
   - 'DOMAIN-SUFFIX,claude.ai,🤖AI'
-  - 'DOMAIN-SUFFIX,bard.google.com,🤖AI'
-  - 'DOMAIN-SUFFIX,gemini.google.com,🤖AI'
   - 'DOMAIN-SUFFIX,github.com,🧰开发工具'
   - 'DOMAIN-SUFFIX,githubusercontent.com,🧰开发工具'
   - 'DOMAIN-SUFFIX,google.com,🛡️Google服务'
