--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -152,6 +152,8 @@ ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/direct.txt
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/private.txt
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/master/cncidr.txt
+# 下列规则部分内容与上面重复，注释以避免重复
+# ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🛩️墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
